# simpleos

./: README.md
01-minimal-kernel/: README.md
01-minimal-kernel/add_uefi_boot/: Cargo.toml
01-minimal-kernel/add_uefi_boot/src/: main.rs
01-minimal-kernel/kernel/: Cargo.toml
01-minimal-kernel/kernel/src/: main.rs
02-build-automation/: Cargo.toml  README.md
02-build-automation/add_uefi_boot/: Cargo.toml
02-build-automation/add_uefi_boot/src/: main.rs
02-build-automation/src/: main.rs
03-display-data-on-host/: Cargo.toml  README.md
03-display-data-on-host/src/: main.rs
04-print-macros/: Cargo.toml  README.md
04-print-macros/add_uefi_boot/src/: main.rs
04-print-macros/src/: main.rs  qemu_console.rs
